--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Ti_St Horarios Rotativos",
   "short_name": "Ti_St",
   "description": "Sistema de gestión de turnos semanales",
-  "start_url": "/",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6366f1",
